added to heroku

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon major fa-cloud"></span>
+					<span class="icon major fa-code"></span>
 					<h1>Web/FrontEnd-Entwickler (M/W), gesucht!</h1>
 					<p>LUST, MIT GRÖSSEREN BAUSTEINEN ZU SPIELEN?</p>
 					<ul class="actions">
@@ -174,7 +174,7 @@
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="copyright">
-					<li>&copy; OESTREICHER+WAGNER GMBH</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Inspiration: <a href="http://facepunchstudios.com/jobs">Facepunchstudio.com</a>/li>
+					<li>&copy; OESTREICHER+WAGNER GMBH</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Inspiration: <a href="http://facepunchstudios.com/jobs">Facepunchstudio.com</a></li>
 				</ul>
 			</section>
 
