--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 					<p>Dann jetzt bewerben!</p>
 					<ul class="actions uniform">
 						<li><a href="mailto:jobs@oew.de" class="button special">jobs@oew.de</a></li>
-						<li><div class='fb-messengermessageus' id='fb-messengermessageus' messenger_app_id='1678638095724206' page_id='426300840744614' color='blue' size='standard'></div><script> window.fbAsyncInit = function() { FB.init({ appId : '1678638095724206', xfbml : true, version : 'v2.6' }); }; (function(d, s, id){ var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = '//connect.facebook.net/en_US/sdk.js'; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk'));</script></li>
+						<li><div class='fb-messengermessageus button' id='fb-messengermessageus' messenger_app_id='1678638095724206' page_id='426300840744614' color='white' size='xlarge'></div><script> window.fbAsyncInit = function() { FB.init({ appId : '1678638095724206', xfbml : true, version : 'v2.6' }); }; (function(d, s, id){ var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = '//connect.facebook.net/en_US/sdk.js'; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk'));</script></li>
 						<li><a href="assets/160705_WebEntwickler.pdf" class="button">herunterladen</a></li>
 					</ul>
 				</div>
