switched msg id

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 					<p>Dann jetzt bewerben!</p>
 					<ul class="actions uniform">
 						<li><a href="mailto:jobs@oew.de" class="button special">jobs@oew.de</a></li>
-						<li><a href="https://m.me/426300840744614" target="_blank" class="button">Chatte mit uns</a></li>
+						<li><a href="https://m.me/nils.hitze" target="_blank" class="button">Chatte mit uns</a></li>
 						<li><a href="assets/160705_WebEntwickler.pdf" class="button special">herunterladen</a></li>
 					</ul>
 				</div>
