--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon major fa-code"></span>
-					<h1>Web/FrontEnd-Entwickler (M/W), gesucht!</h1>
+					<h1>Web/FrontEnd-Entwickler (m/w), gesucht!</h1>
 					<p>LUST, MIT GRÖSSEREN BAUSTEINEN ZU SPIELEN?</p>
 					<ul class="actions">
-						<li><a href="#five" class="button scrolly">Interessiert!</a></li>
+						<li><a href="#six" class="button scrolly">Interessiert!</a></li>
 					</ul>
 				</div>
 			</section>
@@ -113,7 +113,7 @@
 
 
 		<!-- Three -->
-			<section id="four" class="main style1 special">
+			<section id="five" class="main style1 special">
 				<div class="container">
 					<header class="major">
 						<h2>OESTREICHER+WAGNER als Arbeitgeber</h2>
@@ -156,8 +156,18 @@
 				</div>
 			</section>
 
+			<section id="four" class="main style2 special">
+				<div class="container">
+					<header class="major">
+						<h2>Was wir machen?</h2>
+					</header>
+					<p><a frameborder="0" data-theme="light" data-stack-embed="true" data-layers="1,2,3,4" href="https://embed.stackshare.io/stacks/embed/5dee981c48ea18"/></a><script async src="https://cdn1.stackshare.io/javascripts/client-code.js" charset="utf-8"></script></p>
+				</div>
+			</section>
+
+
 		<!-- Four -->
-			<section id="five" class="main style2 special">
+			<section id="six" class="main style1 special">
 				<div class="container">
 					<header class="major">
 						<h2>Interessiert?</h2>
